# pytj

./: .codeclimate.yml  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  setup.cfg  setup.py  upload_to_pypi  upload_to_pypi.cmd
lib/pytj/: __init__.py
pytj/: __init__.py  algorithm_diff.py  testing.py
tests/: test_algorithm_diff.py
