[nosetests]
match=^test
nocapture=1
cover-package=pytj
with-coverage=1
cover-erase=1

[compile_catalog]
directory = pytj/locale
domain = pytj
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = pytj/locale/pytj.pot
width = 80

[init_catalog]
domain = pytj
input_file = pytj/locale/pytj.pot
output_dir = pytj/locale

[update_catalog]
domain = pytj
input_file = pytj/locale/pytj.pot
output_dir = pytj/locale
previous = true

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE